Hands-on 7 New Upload

--- a/Handson_7_Maxwell.ipynb
+++ b/Handson_7_Maxwell.ipynb
@@ -165,15 +165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Could not find inventory file!\n",
-      "Wizard is starting with no inventory.\n",
       "The Wizard Inventory Program\n",
       "\n",
       "\n",
@@ -183,22 +181,35 @@
       "show - Show all items\n",
       "drop - Drop an item\n",
       "exit - Exit program\n",
-      "\n",
-      "Enter a command: walk\n",
-      "While walking down a path, you see a wizard hat .\n",
-      "Do you want to grab it? (y/n): y\n",
-      "You picked up a wizard hat .\n",
-      "\n",
-      "COMMAND MENU\n",
-      "\n",
-      "walk - Walk down the path\n",
-      "show - Show all items\n",
-      "drop - Drop an item\n",
-      "exit - Exit program\n",
-      "\n",
-      "Enter a command: show\n",
-      "Wizard's Inventory:\n",
-      "1. a wizard hat\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a command:  walk\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "While walking down a path, you see a crossbow .\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Do you want to grab it? (y/n):  y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You picked up a crossbow .\n",
       "\n",
       "COMMAND MENU\n",
       "\n",
@@ -207,6 +218,66 @@
       "drop - Drop an item\n",
       "exit - Exit program\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a command:  show\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wizard's Inventory:\n",
+      "1. a wooden staff\n",
+      "2. a crossbow\n",
+      "\n",
+      "COMMAND MENU\n",
+      "\n",
+      "walk - Walk down the path\n",
+      "show - Show all items\n",
+      "drop - Drop an item\n",
+      "exit - Exit program\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a command:  x\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid input. Try again.\n",
+      "\n",
+      "COMMAND MENU\n",
+      "\n",
+      "walk - Walk down the path\n",
+      "show - Show all items\n",
+      "drop - Drop an item\n",
+      "exit - Exit program\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a command:  exit\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bye!\n"
      ]
     }
    ],
@@ -322,9 +393,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
